Remove OpenSearchPagedIndexScan and related classes.
Unit tests pass, some integration tests fail.

Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>