@@ -11,8 +11,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.opensearch.sql.ast.tree.Sort.SortOption.DEFAULT_ASC;
-import static org.opensearch.sql.common.setting.Settings.Key.QUERY_SIZE_LIMIT;
-import static org.opensearch.sql.common.setting.Settings.Key.SQL_CURSOR_KEEP_ALIVE;
 import static org.opensearch.sql.data.type.ExprCoreType.DOUBLE;
 import static org.opensearch.sql.data.type.ExprCoreType.INTEGER;
 import static org.opensearch.sql.data.type.ExprCoreType.STRING;
@@ -39,11 +37,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.opensearch.client.node.NodeClient;
-import org.opensearch.common.unit.TimeValue;
 import org.opensearch.sql.ast.expression.DataType;
 import org.opensearch.sql.ast.expression.Literal;
 import org.opensearch.sql.ast.tree.RareTopN.CommandType;
 import org.opensearch.sql.ast.tree.Sort;
+import org.opensearch.sql.common.setting.Settings;
 import org.opensearch.sql.data.model.ExprBooleanValue;
 import org.opensearch.sql.expression.DSL;
 import org.opensearch.sql.expression.Expression;
@@ -89,22 +87,21 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testProtectIndexScan() {
-    when(settings.getSettingValue(QUERY_SIZE_LIMIT)).thenReturn(200);
-    when(settings.getSettingValue(SQL_CURSOR_KEEP_ALIVE))
-        .thenReturn(TimeValue.timeValueMinutes(1));
+  void testProtectIndexScan() {
+    when(settings.getSettingValue(Settings.Key.QUERY_SIZE_LIMIT))
+        .thenReturn(200);
     String indexName = "test";
     Integer maxResultWindow = 10000;
     NamedExpression include = named("age", ref("age", INTEGER));
     ReferenceExpression exclude = ref("name", STRING);
     ReferenceExpression dedupeField = ref("name", STRING);
     ReferenceExpression topField = ref("name", STRING);
-    List<Expression> topExprs = Arrays.asList(ref("age", INTEGER));
+    List<Expression> topExprs = List.of(ref("age", INTEGER));
     Expression filterExpr = literal(ExprBooleanValue.of(true));
-    List<NamedExpression> groupByExprs = Arrays.asList(named("age", ref("age", INTEGER)));
+    List<NamedExpression> groupByExprs = List.of(named("age", ref("age", INTEGER)));
     List<NamedAggregator> aggregators =
-        Arrays.asList(named("avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)),
-            DOUBLE)));
+      List.of(named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)),
+        DOUBLE)));
     Map<ReferenceExpression, ReferenceExpression> mappings =
         ImmutableMap.of(ref("name", STRING), ref("lastname", STRING));
     Pair<ReferenceExpression, Expression> newEvalField =
@@ -127,8 +124,8 @@ class OpenSearchExecutionProtectorTest {
                                             PhysicalPlanDSL.agg(
                                                 filter(
                                                     resourceMonitor(
-                                                        new OpenSearchIndexScan(client, settings,
-                                                            indexName,
+                                                        OpenSearchIndexScan.create(client,
+                                                            indexName, settings,
                                                             maxResultWindow,
                                                             exprValueFactory)),
                                                     filterExpr),
@@ -156,8 +153,8 @@ class OpenSearchExecutionProtectorTest {
                                         PhysicalPlanDSL.rename(
                                             PhysicalPlanDSL.agg(
                                                 filter(
-                                                    new OpenSearchIndexScan(client, settings,
-                                                        indexName,
+                                                    OpenSearchIndexScan.create(client, indexName,
+                                                        settings,
                                                         maxResultWindow,
                                                         exprValueFactory),
                                                     filterExpr),
@@ -178,7 +175,7 @@ class OpenSearchExecutionProtectorTest {
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testProtectSortForWindowOperator() {
+  void testProtectSortForWindowOperator() {
     NamedExpression rank = named(mock(RankFunction.class));
     Pair<Sort.SortOption, Expression> sortItem =
         ImmutablePair.of(DEFAULT_ASC, DSL.ref("age", INTEGER));
@@ -204,7 +201,7 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testProtectWindowOperatorInput() {
+  void testProtectWindowOperatorInput() {
     NamedExpression avg = named(mock(AggregateWindowFunction.class));
     WindowDefinition windowDefinition = mock(WindowDefinition.class);
 
@@ -223,7 +220,7 @@ class OpenSearchExecutionProtectorTest {
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testNotProtectWindowOperatorInputIfAlreadyProtected() {
+  void testNotProtectWindowOperatorInputIfAlreadyProtected() {
     NamedExpression avg = named(mock(AggregateWindowFunction.class));
     Pair<Sort.SortOption, Expression> sortItem =
         ImmutablePair.of(DEFAULT_ASC, DSL.ref("age", INTEGER));
@@ -248,7 +245,7 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testWithoutProtection() {
+  void testWithoutProtection() {
     Expression filterExpr = literal(ExprBooleanValue.of(true));
 
     assertEquals(
@@ -264,7 +261,7 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testVisitMlCommons() {
+  void testVisitMlCommons() {
     NodeClient nodeClient = mock(NodeClient.class);
     MLCommonsOperator mlCommonsOperator =
             new MLCommonsOperator(
@@ -282,7 +279,7 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testVisitAD() {
+  void testVisitAD() {
     NodeClient nodeClient = mock(NodeClient.class);
     ADOperator adOperator =
             new ADOperator(
@@ -300,7 +297,7 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testVisitML() {
+  void testVisitML() {
     NodeClient nodeClient = mock(NodeClient.class);
     MLOperator mlOperator =
             new MLOperator(
@@ -320,7 +317,7 @@ class OpenSearchExecutionProtectorTest {
   }
 
   @Test
-  public void testVisitNested() {
+  void testVisitNested() {
     Set<String> args = Set.of("message.info");
     Map<String, List<String>> groupedFieldsByPath =
         Map.of("message", List.of("message.info"));
